--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -261,7 +261,7 @@ font-weight: bold;
 }
 
 //Controls the settings for the links to the list performance page from the list tables (prospect)
-.prospectListDescription{
+.ListDescription{
   a{
     &:hover{
       text-decoration: underline;
