added list and phase gross pages

--- a/src/app/Returns/Subviews/list-gross/list-gross.component.html
+++ b/src/app/Returns/Subviews/list-gross/list-gross.component.html
@@ -3,8 +3,66 @@
 
 <div *ngIf="this.pageReady == true">
   <app-toolbar></app-toolbar>
-  <ul>
-    <li *ngFor="let date of Date">{{date}}</li>
-  </ul>
+  <!-- <ul>
+    <li *ngFor="let element of ListGrossArr">{{element.Date}}</li>
+  </ul> -->
+
+
+  <table id="table1" mat-table [dataSource]="this.ListGrossArr">
+    <ng-container matColumnDef="Date">
+      <th mat-header-cell class="dateColumn" *matHeaderCellDef> Date </th>
+      <td mat-cell class="dateColumn" *matCellDef="let element"> {{element.Date|date:'fullDate'}} </td>
+      <td mat-footer-cell class="dateColumn" *matFooterCellDef>Totals</td>
+    </ng-container>
+    <ng-container matColumnDef="NonDonors">
+      <th mat-header-cell *matHeaderCellDef> Non Donors </th>
+      <td mat-cell *matCellDef="let element"> {{element.NonDonors}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("NonDonors")}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CashDonors">
+      <th mat-header-cell *matHeaderCellDef> Cash Donors </th>
+      <td mat-cell *matCellDef="let element"> {{element.CashDonors}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CashDonors")}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CashGross">
+      <th mat-header-cell *matHeaderCellDef> Cash Gross </th>
+      <td mat-cell *matCellDef="let element"> {{element.CashGross|currency:'USD':'symbol':'1.2-2'}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CashGross")|currency:'USD':'symbol':'1.2-2'}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CardDonors">
+      <th mat-header-cell *matHeaderCellDef> Card Donors </th>
+      <td mat-cell *matCellDef="let element"> {{element.CardDonors}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CardDonors")}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CardGross">
+      <th mat-header-cell *matHeaderCellDef> Card Gross </th>
+      <td mat-cell *matCellDef="let element"> {{element.CardGross|currency:'USD':'symbol':'1.2-2'}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CardGross")|currency:'USD':'symbol':'1.2-2'}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CheckDonors">
+      <th mat-header-cell *matHeaderCellDef> Check Donors </th>
+      <td mat-cell *matCellDef="let element"> {{element.CheckDonors}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CheckDonors")}}</td>
+    </ng-container>
+    <ng-container matColumnDef="CheckGross">
+      <th mat-header-cell *matHeaderCellDef> Check Gross </th>
+      <td mat-cell *matCellDef="let element"> {{element.CheckGross|currency:'USD':'symbol':'1.2-2'}} </td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("CheckGross")|currency:'USD':'symbol':'1.2-2'}}</td>
+    </ng-container>
+    <ng-container matColumnDef="TotalDonors">
+      <th mat-header-cell *matHeaderCellDef> Total Donors </th>
+      <td mat-cell *matCellDef="let element"><span class="totalColumn">{{element.TotalDonors}}</span></td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("TotalDonors")}}</td>
+    </ng-container>
+    <ng-container matColumnDef="TotalGross">
+      <th mat-header-cell *matHeaderCellDef> Total Gross </th>
+      <td mat-cell *matCellDef="let element"><span class="totalColumn">{{element.TotalGross|currency:'USD':'symbol':'1.2-2'}}</span></td>
+      <td mat-footer-cell *matFooterCellDef>{{getTotalValue("TotalGross")|currency:'USD':'symbol':'1.2-2'}}</td>
+    </ng-container>
+    
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row class="example-element-row" *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+    </table>
 </div>
-<p>Test</p>
